--- a/postpage/postpage/style-postform100.css
+++ b/postpage/postpage/style-postform100.css
@@ -1,38 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+:root {
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #31b78a;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-primary-variant: #111e88;
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
+
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
+
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
+
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+/* -------------- DARK THEME VARAIBLES ------------- */
+.dark-theme-variables {
+  --color-background: #181a1e;
+  --color-white: #2c3134;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem  var(--color-light);
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
+/* 
 .container {
     width: 100%;
     height: 100%;
     margin-top:  180px ;
     margin-left: auto;
-  
     
   }
-  
-  .input-text1{
+   */
+   .input-text1{
+    color: var(--color-dark);
     margin-top: 15px;
     border: 2px;
     border-radius: 20px;
+    background-color: var(--color-background);
     border-color: black;
     width: 70%;
     padding: 12px 20px;
     height: 45px;
   }
   .input-text2{
+    color: var(--color-dark);
     margin-top: 15px;
     border: 2px;
+    background-color: var(--color-background);
     border-radius: 20px;
     border-color: black;
     width: 70%;
     height: 150px;
     padding: 12px 20px;
     box-sizing: border-box;  
+  }
+  
+  .form-container{
+    /* background-color: var(--color-info-light); */
+    background: var(--color-white);
+    width: 80%;
+    margin-top: 10px;
+    margin-left: 100px;
+    padding: 50px;
+    border-radius: 40px;
+    text-decoration: none;
+    transition: .3s ease;
   }
   
   .form-container .text{
@@ -45,19 +96,9 @@
       width: 300px ;
       border: none;
       margin-top: -20px;
-      background-color: #ADCAFB ;
+      background-color: var(--color-info-dark);
       border-radius: 20px;
       
-  }
-  
-   .form-container{
-      background-color: var(--text-color);
-      margin: 50px;
-      padding: 70px;
-      border-radius: 10px;
-      text-decoration: none;
-      color: rgb(0, 0, 0);
-      transition: .3s ease;
   }
   
   .sub-text{
@@ -116,11 +157,13 @@
     padding: 10px 0 10px 20px;
     border: 2px solid rgba(2, 0, 0, 0.3);
     border-radius: 10px;
+    color: var(--color-dark);
+    border: black;
   }
   
   .sub-body .form-group label {
     line-height: 40px;
-    color: #000000;
+    color:var(--color-dark);
     font-size: 24px;
     margin: 0 0 0 30px;
     display: block;
