--- a/postpage/postpage/style-postform20.css
+++ b/postpage/postpage/style-postform20.css
@@ -27,7 +27,7 @@
 /* -------------- DARK THEME VARAIBLES ------------- */
 .dark-theme-variables {
   --color-background: #181a1e;
-  --color-white: #202528;
+  --color-white: #2c3134;
   --color-dark: #edeffd;
   --color-dark-variant: #a3bdcc;
   --color-light: rgba(0, 0, 0, 0.4);
@@ -36,24 +36,31 @@
 
 
 /* .container {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  margin-left: auto;  
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 100px;  
 } */
 
+
 .input-text1{
+  color: var(--color-dark);
   margin-top: 15px;
   border: 2px;
   border-radius: 20px;
+  background-color: var(--color-background);
   border-color: black;
   width: 70%;
   padding: 12px 20px;
   height: 45px;
 }
 .input-text2{
+  color: var(--color-dark);
   margin-top: 15px;
   border: 2px;
+  background-color: var(--color-background);
   border-radius: 20px;
   border-color: black;
   width: 70%;
@@ -66,7 +73,7 @@
   /* background-color: var(--color-info-light); */
   background: var(--color-white);
   width: 80%;
-  margin-top: 40px;
+  margin-top: 10px;
   margin-left: 100px;
   padding: 50px;
   border-radius: 40px;
