--- a/postpage/postpage/style-postform60.css
+++ b/postpage/postpage/style-postform60.css
@@ -1,5 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Kanit:wght@100;200;300&family=Poppins:wght@100;300&display=swap%22");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap%22") ;
+
+
+:root {
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #31b78a;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-primary-variant: #111e88;
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
+
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
+
+  --card-padding: 1.8rem;
+  --padding-1: 1.2rem;
+
+  --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+/* -------------- DARK THEME VARAIBLES ------------- */
+.dark-theme-variables {
+  --color-background: #181a1e;
+  --color-white: #2c3134;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem  var(--color-light);
+}
 
 *{
   margin: 0;
@@ -17,40 +52,49 @@
 }
 
 .form-container .text{
-    --text-color: #000000;
-    font-size: 30px;
-    text-align: center ;
-    font-weight: 500;
-    color: var(--text-color);
-    padding: 12px 80px ;
-    width: 300px ;
-    border: none;
-    margin-top: -20px;
-    background-color: #ADCAFB ;
-    border-radius: 20px;
+  --text-color: #000000;
+  font-size: 30px;
+  text-align: center ;
+  font-weight: 500;
+  color: var(--text-color);
+  padding: 12px 80px ;
+  width: 300px ;
+  border: none;
+  margin-top: -20px;
+  background-color: var(--color-info-dark);
+  border-radius: 20px;
+  
 }
 
- .form-container{
-    background-color: var(--text-color);
-    margin: 50px;
-    padding: 70px;
-    border-radius: 10px;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    transition: .3s ease;
+ 
+.form-container{
+  /* background-color: var(--color-info-light); */
+  background: var(--color-white);
+  width: 80%;
+  margin-top: 10px;
+  margin-left: 100px;
+  padding: 50px;
+  border-radius: 40px;
+  text-decoration: none;
+  transition: .3s ease;
 }
 
 .form-container .sub-text{
-    margin-top: 50px;
-    font-size: 20px;
-    
+  margin-top: 50px;
+  font-size: 20px;
+  color: var(--color-dark);
+  
 }
+
 .text-normal{
+  color: var(--color-dark);
     font-size: 18px;
     margin-top: 15px;
 }
 
 .input-textlocation{
+   color: var(--color-dark);
+   background-color: var(--color-background);
     border: 2px; 
     border-radius: 20px;
     border-color: black;
@@ -62,16 +106,30 @@
     
 }
 .input-text1{
-    border: 2px; 
-    border-radius: 20px;
-    border-color: black;
-    width: 60%;
-    height: 45px;
-    padding: 12px 20px; 
-    margin-top: 15px;
+  color: var(--color-dark);
+  margin-top: 15px;
+  border: 2px;
+  border-radius: 20px;
+  background-color: var(--color-background);
+  border-color: black;
+  width: 70%;
+  padding: 12px 20px;
+  height: 45px;
+}
+.input-text2{
+  color: var(--color-dark);
+  margin-top: 10px;
+  border: 2px;
+  background-color: var(--color-background);
+  border-radius: 20px;
+  border-color: black;
+  
+  padding: 12px 20px;
+  box-sizing: border-box;  
 }
 
 .select-location{
+  background-color: var(--color-background);
     border: 2px; 
     border-radius: 20px;
     border-color: black;
@@ -83,6 +141,7 @@
 }
 
 .select-station{
+  background-color: var(--color-background);
     border: 2px;
     margin-left: 10px;
     border-radius: 20px;
@@ -91,6 +150,9 @@
     text-align: center;
     height: 35px;
     
+}
+.select-station-text{
+  color: var(--color-dark);
 }
 
 
