--- a/postpage/postpage/style-postform40.css
+++ b/postpage/postpage/style-postform40.css
@@ -121,10 +121,10 @@ background-color: var(--color-background);
     
 
 .quantity-room{
-  
   margin-top: 50px;
-  margin-right: 20px;
-  font-size: 20px;
+  margin-right: 10px;
+  font-size: 16px;
+  color: var(--color-dark);
 
 }
 
