--- a/postpage/postpage/style-sibebarNew.css
+++ b/postpage/postpage/style-sibebarNew.css
@@ -144,10 +144,12 @@ aside {
 }
 
 aside .top {
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top:7rem;
+  
 }
 
 aside .logo {
@@ -156,6 +158,7 @@ aside .logo {
 }
 
 .logo-rentnaja{
+  position: fixed	;
   margin-left: 50px
 }
 
@@ -179,9 +182,10 @@ aside .close {
 aside .sidebar {
   display: flex;
   flex-direction: column;
-  height: 86vh;
-  position: relative;
-  top: 3rem;
+  position: fixed	;
+  width: 200px;
+  height:80vh;
+  top: 10rem;
 }
 
 aside h3 {
@@ -190,7 +194,7 @@ aside h3 {
 
 aside .sidebar a {
   display: flex;
-  color: var(--color--dark);
+  color: var(--color-dark);
   margin-left: 2rem;
   gap: 1rem;
   align-items: center;
@@ -457,6 +461,7 @@ main {
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
+    
     grid-template-columns: 1fr;
   }
 
