--- a/postpage/postpage/style-postform100.css
+++ b/postpage/postpage/style-postform100.css
@@ -75,10 +75,12 @@
   
   .form-container{
     /* background-color: var(--color-info-light); */
+    box-shadow: 3px 3px 3px 3px rgba(1, 16, 8, 0.73);
     background: var(--color-white);
     width: 80%;
     margin-top: 10px;
     margin-left: 100px;
+    margin-bottom: 10px;
     padding: 50px;
     border-radius: 40px;
     text-decoration: none;
@@ -86,8 +88,9 @@
   }
   
   .form-container .text{
-      --text-color: #000000;
-      font-size: 30px;
+      background: linear-gradient(0deg, rgb(34, 193, 195) 0%, rgba(45,253,93,1) 100%);
+      --text-color: #000000; 
+      font-size: 26px;
       text-align: center ;
       font-weight: 500;
       color: var(--text-color);
@@ -95,10 +98,11 @@
       width: 300px ;
       border: none;
       margin-top: -20px;
-      background-color: var(--color-info-dark);
+      background-color: var(--color-text-dark);
       border-radius: 20px;
       
   }
+  
   
   .sub-text{
       margin-top: 50px;
@@ -322,10 +326,10 @@
       }
       .btnall{
         margin-top: 100px;
-        margin-left: 35%;
+        margin-left: 28%;
       }
     .btn1{
-        background-color: #5DBB63 ;
+        background-color: #31b78a ;
         margin: 10px;
         padding: 15px 45px;
         text-align: center;
@@ -341,11 +345,11 @@
          background-position: right center; /* change the direction of the change here */
          color: #fff;
          text-decoration: none;
-         background-color: #16A085 ;
+         background-color: #279d17 ;
        }
       
        .btn2{
-        background-color: #D0312D ;
+        background-color: #ff7782 ;
         margin: 10px;
         padding: 15px 45px;
         text-align: center;
