--- a/postpage/postpage/style-postform20.css
+++ b/postpage/postpage/style-postform20.css
@@ -71,10 +71,12 @@
 
 .form-container{
   /* background-color: var(--color-info-light); */
+  box-shadow: 3px 3px 3px 10px rgba(0, 0, 0, 0.73);
   background: var(--color-white);
   width: 80%;
   margin-top: 10px;
   margin-left: 100px;
+  margin-bottom: 10px;
   padding: 50px;
   border-radius: 40px;
   text-decoration: none;
@@ -82,8 +84,9 @@
 }
 
 .form-container .text{
-    --text-color: #000000;
-    font-size: 30px;
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,253,93,1) 100%);
+    --text-color: #000000; 
+    font-size: 26px;
     text-align: center ;
     font-weight: 500;
     color: var(--text-color);
@@ -91,7 +94,7 @@
     width: 300px ;
     border: none;
     margin-top: -20px;
-    background-color: var(--color-info-dark);
+    background-color: var(--color-text-dark);
     border-radius: 20px;
     
 }
@@ -223,47 +226,48 @@ a {
 }
 .btnall{
   margin-top: 100px;
-  margin-left: 28%;
+  margin-left: 28% ;
+  position: relative;
 }
 .btn1{
-    background-color: #5DBB63 ;
-    margin: 10px;
-    padding: 15px 45px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: black;            
-    border-radius: 30px;
-    display: block;
-    border: 0px;
-  }         
-   .btn1:hover{
-     background-position: right center; /* change the direction of the change here */
-     color: #fff;
-     text-decoration: none;
-     background-color: #16A085 ;
-   }
-  
-   .btn2{
-    background-color: #D0312D ;
-    margin: 10px;
-    padding: 15px 45px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: black;            
-    border-radius: 30px;
-    display: block;
-    border: 0px;
-  }         
-   .btn2:hover{
-     background-position: right center; /* change the direction of the change here */
-     color: #fff;
-     text-decoration: none;
-     background-color: #B80F0A ;
-   }
+        background-color: #31b78a ;
+        margin: 10px;
+        padding: 15px 45px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: black;            
+        border-radius: 30px;
+        display: block;
+        border: 0px;
+      }         
+       .btn1:hover{
+         background-position: right center; /* change the direction of the change here */
+         color: #fff;
+         text-decoration: none;
+         background-color: #279d17 ;
+       }
+      
+       .btn2{
+        background-color: #ff7782 ;
+        margin: 10px;
+        padding: 15px 45px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: black;            
+        border-radius: 30px;
+        display: block;
+        border: 0px;
+      }         
+       .btn2:hover{
+         background-position: right center; /* change the direction of the change here */
+         color: #fff;
+         text-decoration: none;
+         background-color: #B80F0A ;
+       }
 
 
 
